--- a/src/components/FormCheckout/FormCheckout.css
+++ b/src/components/FormCheckout/FormCheckout.css
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
     background-color: #e2e4e5;
-    height: 100vh;
+    height: auto;
 }
 
 .formm{
