--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 .loginWrapper{
-    height: 100vh;
+    height: auto;
     background-color:#e2e4e5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
 }
