--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,23 @@
+
 .navStyle{
-    color: #ffffff8c;
-    background-color: #212529;
+    color: white;
+    background-color: #2233a4;
+    font-weight: 600;
     border: none;
     padding: 8px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: none;
+    
+}
+.navbar{
+    background-color: #2233a4;
+    font-weight: 600;
+    height: 80px;
+    width: 100%;
+    position: fixed !important;
+    top: 0;
+    z-index: 999;
+    -webkit-box-shadow: 0px 2px 11px -4px rgba(23,23,23,1);
+    -moz-box-shadow: 0px 2px 11px -4px rgba(23,23,23,1);
+    box-shadow: 0px 2px 11px -4px rgba(23,23,23,1);
 }
