--- a/src/components/AdminPanel/AdminPanel.css
+++ b/src/components/AdminPanel/AdminPanel.css
@@ -2,6 +2,7 @@
 
 .admin-container {
     height: fit-content !important;
+    margin-top: 80px;
     position: relative;
     display: grid; 
     grid-auto-flow: column dense; 
