--- a/src/components/AdminPanel/EditProducts.css
+++ b/src/components/AdminPanel/EditProducts.css
@@ -51,10 +51,10 @@
 
 .table-row {
   display: grid;
-  grid-template-columns: 1.5fr 1.5fr 0.4fr 0.4fr 0.4fr 1.8fr 1fr;
+  grid-template-columns: 1.3fr 1.3fr 0.6fr 0.5fr 0.4fr 0.4fr 0.4fr 1.5fr 1fr;
   grid-template-rows: auto;
   grid-template-areas: 
-  "title description stock price weight url actions";
+  "title description category brand stock price weight url actions";
   grid-column-gap: 10px;
   align-items: center;
   padding: 10px;
@@ -64,10 +64,11 @@
 
 .table-header {
   display: grid;
-  grid-template-columns: 1.5fr 1.5fr 0.4fr 0.4fr 0.4fr 1.8fr 1fr;
+  grid-template-columns: 1.3fr 1.3fr 0.6fr 0.5fr 0.4fr 0.4fr 0.4fr 1.5fr 1fr;
   grid-template-rows: auto;
   grid-template-areas: 
-  "title description stock price weight url actions";
+  "title description category brand stock price weight url actions";
+  grid-column-gap: 10px;
   background-color: rgb(52, 52, 52);
   color: rgb(196, 196, 196);
   font-weight: bold;
@@ -81,6 +82,14 @@
 
 .product-description {
   grid-area: description;
+}
+
+.product-category {
+  grid-area: category;
+}
+
+.product-brand {
+  grid-area: brand;
 }
 
 .product-stock {
